Another margin collapse fix

--- a/preproc/sass/index.scss
+++ b/preproc/sass/index.scss
@@ -42,6 +42,7 @@ section {
     z-index: 100;
   }
   .Content {
+    padding: 0.05px; // disable margin collapse
     margin: auto;
     position: relative;
     text-align: center;
